fix(project): featured card title still clipping

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -27,7 +27,7 @@
   &.featured {
 
     .title {
-      height: 1em;
+      height: 1.1em;
       padding-right: 8px;
       font-family: var(--body-font-family);
       font-size: 34px;
